# WhatAPK

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: android_manifest.rs  main.rs
src/rules/: cordova.rs  flutter.rs  kony.rs  mod.rs  reactnative.rs  rootbeer.rs  vkey.rs  xamarin.rs
