[package]
name = "whatapk"
version = "0.2.0"
authors = ["Terry Chia <terrycwk1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
anyhow = "1.0.31"
zip = "0.5.6"
regex = "1.3.9"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
strum = "0.20.0"
strum_macros = "0.20.1"
lazy_static = "1.4.0"
axmldecoder = "0.3.0"
